@@ -19,6 +19,7 @@ require_once(dirname(__FILE__)."/UPLOAD.php");
 require_once(dirname(__FILE__)."/XMLISSUE.php");
 require_once(dirname(__FILE__)."/DIFF.php");
 require_once(dirname(__FILE__)."/OVERRIDEFINDER.php");
+require_once(dirname(__FILE__)."/APPIDENABLER.php");
 
 class UTIL
 {
